--- a/styles/main.css
+++ b/styles/main.css
@@ -54,6 +54,7 @@ details summary {
 
 img.next-image {
   margin: 0;
+  border-radius: 8px;
 }
 
 .prose a {
@@ -62,4 +63,11 @@ img.next-image {
 
 .nav-line .nav-link {
   color: #69778c;
+}
+
+
+footer {
+  background-color: #7a10a1;
+  margin-bottom: auto
+  ;
 }
